Fix:SOC-514, Label selectize now does not overflow new message window to screen. however while adding tags with huge length of characters make it span to next line

--- a/server/src/main/assets/stylesheets/synereo-main.less
+++ b/server/src/main/assets/stylesheets/synereo-main.less
@@ -706,6 +706,7 @@ transform: translate(0,0); */
   zoom: 1;
   *display: inline;
 }
+//overriden this class specific for labels selectize word break property added
 .selectize-control.multi .selectize-input > div {
   cursor: pointer;
   margin: 0 3px 3px 0;
@@ -714,6 +715,8 @@ transform: translate(0,0); */
   background: #2EAEE3;
   color: #303030;
   border: 0 solid #d0d0d0;
+  //added below property
+  word-break: break-all;
 }
 .selectize-control.multi .selectize-input > div.active {
   background: #e8e8e8;
@@ -740,6 +743,12 @@ transform: translate(0,0); */
   -webkit-user-select: auto !important;
   -webkit-box-shadow: none !important;
   box-shadow: none !important;
+}
+//overriden this class specific for labels selectize
+#labelsSelectizeInputId .selectize-input > input {
+width:100% !important;
+    word-break: break-word;
+
 }
 .selectize-input > input::-ms-clear {
   display: none;
